fix: 一旦できた。

--- a/.env.sample
+++ b/.env.sample
@@ -33,6 +33,8 @@ CSR_COMMON_NAME=ft_transcendence
 ################
 ELASTIC_VERSION=8.17.2
 
+ELASTIC_USER=elastic
+
 # Superuser role, full access to cluster management and data indices.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
 ELASTIC_PASSWORD='changeme'
