--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -39,7 +39,8 @@ services:
     networks:
       - net_pong
     healthcheck:
-      test: ["CMD", "curl", "-I", "http://localhost:5173/"] interval: 10s
+      test: ["CMD", "curl", "-I", "http://localhost:5173/"]
+      interval: 10s
       timeout: 5s
       retries: 5
       start_period: 120s
