--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -103,61 +103,6 @@ services:
       retries: 5
       start_period: 120s
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
-    container_name: "elasticsearch"
-    environment:
-      discovery.type: single-node
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
-      interval: 30s
-      timeout: 5s
-      retries: 5
-    ports:
-      - "9200:9200"
-    networks:
-      - net_pong
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.15.2
-    container_name: "kibana"
-    environment:
-      ELASTICSEARCH_HOSTS: "http://elasticsearch:9200"
-    ports:
-      - "5601:5601"
-    networks:
-      - net_pong
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-
-  logstash:
-    image: docker.elastic.co/logstash/logstash:7.15.2
-    container_name: "logstash"
-    volumes:
-      - ./logstash/pipeline/:/usr/share/logstash/pipeline/
-    environment:
-      ELASTICSEARCH_HOST: "elasticsearch"
-      ELASTICSEARCH_PORT: "9200"
-    networks:
-      - net_pong
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-
-  filebeat:
-    image: docker.elastic.co/beats/filebeat:7.15.2
-    container_name: "filebeat"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml
-    networks:
-      - net_pong
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-
   in_memory_db:
     container_name: "in_memory_db"
     image: redis:7.4.2
@@ -171,6 +116,139 @@ services:
     ports:
       - "6379:6379"
 
+  elasticsearch:
+    container_name: "elasticsearch"
+    image: "elasticsearch"
+    build:
+      context: elasticsearch/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,Z
+      - vol_elasticsearch:/usr/share/elasticsearch/data:Z
+    ports:
+      - 9200:9200
+      # - 9300:9300
+    environment:
+      node.name: elasticsearch
+      ES_JAVA_OPTS: -Xms512m -Xmx512m
+      # Bootstrap password.
+      # Used to initialize the keystore during the initial startup of
+      # Elasticsearch. Ignored on subsequent runs.
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      # Use single node discovery in order to disable production mode and avoid bootstrap checks.
+      # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
+      discovery.type: single-node
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+    networks:
+      - net_pong
+
+  kibana:
+    container_name: "kibana"
+    image: "kibana"
+    build:
+      context: kibana/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,Z
+    ports:
+      - 5601:5601
+    environment:
+      KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
+    networks:
+      - net_pong
+    depends_on:
+      - elasticsearch
+
+  logstash:
+    container_name: "logstash"
+    image: "logstash"
+    build:
+      context: logstash/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    volumes:
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
+      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
+    ports:
+      - 5044:5044
+      - 50000:50000/tcp
+      - 50000:50000/udp
+      - 9600:9600
+    environment:
+      LS_JAVA_OPTS: -Xms256m -Xmx256m
+      LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
+      ELASTIC_USER: ${ELASTIC_USER:-}
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+    networks:
+      - net_pong
+    depends_on:
+      - elasticsearch
+
+  filebeat:
+    container_name: "filebeat"
+    image: "filebeat"
+    build:
+      context: filebeat/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    # Run as 'root' instead of 'filebeat' (uid 1000) to allow reading
+    # 'docker.sock' and the host's filesystem.
+    user: root
+    command:
+      # Log to stderr.
+      - -e
+      # Disable config file permissions checks. Allows mounting
+      # 'config/filebeat.yml' even if it's not owned by root.
+      # see: https://www.elastic.co/guide/en/beats/libbeat/current/config-file-permissions.html
+      - --strict.perms=false
+    volumes:
+      - ./filebeat/config/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro,Z
+      - type: bind
+        source: /var/lib/docker/containers
+        target: /var/lib/docker/containers
+        read_only: true
+      - type: bind
+        source: /var/run/docker.sock
+        target: /var/run/docker.sock
+        read_only: true
+    environment:
+      FILEBEAT_INTERNAL_PASSWORD: ${FILEBEAT_INTERNAL_PASSWORD:-}
+      BEATS_SYSTEM_PASSWORD: ${BEATS_SYSTEM_PASSWORD:-}
+    networks:
+      - net_pong
+    depends_on:
+      - elasticsearch
+
+  setup:
+    profiles:
+      - setup
+    image: "elk-setup"
+    build:
+      context: setup/
+      args:
+        ELASTIC_VERSION: ${ELASTIC_VERSION}
+    init: true
+    volumes:
+      - ./setup/entrypoint.sh:/entrypoint.sh:ro,Z
+      - ./setup/lib.sh:/lib.sh:ro,Z
+      - ./setup/roles:/roles:ro,Z
+    environment:
+      ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
+      LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
+      KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
+      FILEBEAT_INTERNAL_PASSWORD: ${FILEBEAT_INTERNAL_PASSWORD:-}
+      BEATS_SYSTEM_PASSWORD: ${BEATS_SYSTEM_PASSWORD:-}
+    networks:
+      - net_pong
+    depends_on:
+      - elasticsearch
+
 networks:
   net_pong:
     name: "net_pong"
@@ -178,3 +256,5 @@ networks:
 volumes:
   vol_rdbms:
     name: "vol_rdbms"
+  vol_elasticsearch:
+    name: "vol_elasticsearch"
