fix: docker compose

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -177,9 +177,9 @@ services:
       - ./elk/logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
     ports:
       - 5044:5044
-      - 50000:50000/tcp
-      - 50000:50000/udp
-      - 9600:9600
+      # - 50000:50000/tcp
+      # - 50000:50000/udp
+      # - 9600:9600
     environment:
       LS_JAVA_OPTS: -Xms256m -Xmx256m
       LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
@@ -228,7 +228,8 @@ services:
   setup:
     profiles:
       - setup
-    image: "elk-setup"
+    image: "setup-elk"
+    container_name: "setup-elk"
     build:
       context: elk/setup/
       args:
