--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,16 @@ services:
       interval: 5s
       retries: 5
 
+  in_memory_db:
+    container_name: "in_memory_db"
+    image: redis:7.4.2
+    networks:
+      - net_pong
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+      interval: 1s
+      timeout: 3s
+      retries: 5
   
   elasticsearch:
     container_name: "elasticsearch"
@@ -114,7 +124,7 @@ services:
       # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
       discovery.type: single-node
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      test: ["CMD", "curl", "-f", "-u", "${ELASTIC_USER}:${ELASTIC_PASSWORD}","http://localhost:9200"]
       interval: 30s
       timeout: 5s
       retries: 5
@@ -137,7 +147,8 @@ services:
     networks:
       - net_pong
     depends_on:
-      - elasticsearch
+      elasticsearch:
+        condition: service_healthy
 
   logstash:
     container_name: "logstash"
@@ -162,7 +173,8 @@ services:
     networks:
       - net_pong
     depends_on:
-      - elasticsearch
+      elasticsearch:
+        condition: service_healthy
 
   filebeat:
     container_name: "filebeat"
@@ -197,18 +209,8 @@ services:
     networks:
       - net_pong
     depends_on:
-      - elasticsearch
-
-  in_memory_db:
-    container_name: "in_memory_db"
-    image: redis:7.4.2
-    networks:
-      - net_pong
-    healthcheck:
-      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
-      interval: 1s
-      timeout: 3s
-      retries: 5
+      elasticsearch:
+        condition: service_healthy
 
   setup: 
     profiles:
@@ -233,10 +235,12 @@ services:
     networks:
       - net_pong
     depends_on:
-      - elasticsearch
+      elasticsearch:
+        condition: service_healthy
 
 networks:
   net_pong:
+    driver: bridge
     name: "net_pong"
 
 volumes:
