--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -59,7 +59,7 @@ services:
       - "80:80"
     volumes:
       - ./reverseproxy/nginx.local.conf:/etc/nginx/nginx.conf
-      - ./reverseproxy/avatars:/var/www/data/avatars
+      - avatars_data:/var/www/data/avatars
     networks:
       - net_pong
     depends_on:
@@ -80,7 +80,7 @@ services:
     networks:
       - net_pong
     volumes:
-      - ./reverseproxy/avatars:/var/www/data/avatars
+      - avatars_data:/var/www/data/avatars
     environment:
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
