--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - ./reverseproxy/ssl/:/etc/ssl/
       - ./reverseproxy/nginx.conf:/etc/nginx/nginx.conf
       - vol_static_builder:/usr/share/nginx/html # vol_static_builderをマウント
+      - avatars_data:/var/www/data/avatars
     networks:
       - net_pong
     depends_on:
@@ -66,6 +67,8 @@ services:
       - "8000"
     networks:
       - net_pong
+    volumes:
+      - avatars_data:/var/www/data/avatars
     environment:
       DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
       DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
@@ -110,3 +113,5 @@ volumes:
     name: "vol_rdbms"
   vol_static_builder:
     name: "vol_static_builder"
+  avatars_data:
+    name: "avatars_data"
