ホーム、リモート対戦一覧、ゲーム #217

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -42,17 +42,17 @@ RUN django-admin startproject ${DJANGO_PROJECT_NAME}
 
 # Create Django apps
 WORKDIR ${DJANGO_PROJECT_DIR}
-RUN python manage.py startapp player
 RUN python manage.py startapp tournament
 RUN python manage.py startapp match
 RUN python manage.py startapp user
+RUN python manage.py startapp room
 
 # project, appsのファイルをコピー
 COPY ./api/conf/project/* ${DJANGO_PROJECT_DIR}${DJANGO_PROJECT_NAME}/
-COPY ./api/conf/app_player/* ${DJANGO_PROJECT_DIR}player/
 COPY ./api/conf/app_tournament/* ${DJANGO_PROJECT_DIR}tournament/
 COPY ./api/conf/app_match/* ${DJANGO_PROJECT_DIR}match/
 COPY ./api/conf/app_user/* ${DJANGO_PROJECT_DIR}user/
+COPY ./api/conf/app_room/* ${DJANGO_PROJECT_DIR}room/
 
 # Create utils Directory and Copy files
 RUN mkdir -p ${DJANGO_PROJECT_DIR}utils
