--- a/.env.sample.local
+++ b/.env.sample.local
@@ -32,8 +32,10 @@ CSR_COMMON_NAME=ft_transcendence
 ###############
 ELASTIC_VERSION=8.17.2
 ELASTIC_USER=elastic
-ELASTIC_PASSWORD='changeme'
-LOGSTASH_INTERNAL_PASSWORD='changeme'
-KIBANA_SYSTEM_PASSWORD='changeme'
-FILEBEAT_INTERNAL_PASSWORD='changeme'
-BEATS_SYSTEM_PASSWORD='changeme'
+ELASTIC_PASSWORD=changeme
+LOGSTASH_INTERNAL_PASSWORD=changeme
+KIBANA_SYSTEM_PASSWORD=changeme
+FILEBEAT_INTERNAL_PASSWORD=changeme
+METRICBEAT_INTERNAL_PASSWORD=changeme
+MONITORING_INTERNAL_PASSWORD=changeme
+BEATS_SYSTEM_PASSWORD=changeme
