--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -51,7 +51,7 @@ RUN python manage.py startapp room
 COPY ./api/conf/project/* ${DJANGO_PROJECT_DIR}${DJANGO_PROJECT_NAME}/
 COPY ./api/conf/app_tournament/* ${DJANGO_PROJECT_DIR}tournament/
 COPY ./api/conf/app_match/* ${DJANGO_PROJECT_DIR}match/
-COPY ./api/conf/app_user/* ${DJANGO_PROJECT_DIR}user/
+COPY ./api/conf/app_user/ ${DJANGO_PROJECT_DIR}user/
 COPY ./api/conf/app_room/* ${DJANGO_PROJECT_DIR}room/
 
 # Create utils Directory and Copy files
