--- a/api/dev/docker-compose.yml
+++ b/api/dev/docker-compose.yml
@@ -5,15 +5,17 @@ services:
     build:
       context: ../../
       dockerfile: ./api/Dockerfile
-      target: deploy_asgi # 開発用のDockerfileのターゲット
+      target: development_asgi # 開発用のDockerfileのターゲット
     ports:
       - "8000:8000"
     networks:
       - pong_network
     environment:
-      DJANGO_SUPERUSER_USERNAME: ${DJANGO_SUPERUSER_USERNAME}
-      DJANGO_SUPERUSER_EMAIL: ${DJANGO_SUPERUSER_EMAIL}
+      DJANGO_SUPERUSER_LOGIN_NAME: ${DJANGO_SUPERUSER_LOGIN_NAME}
+      DJANGO_SUPERUSER_DISPLAY_NAME: ${DJANGO_SUPERUSER_DISPLAY_NAME}
       DJANGO_SUPERUSER_PASSWORD: ${DJANGO_SUPERUSER_PASSWORD}
+      DJANGO_SUPERUSER_SECRET_QUESTION: ${DJANGO_SUPERUSER_SECRET_QUESTION}
+      DJANGO_SUPERUSER_SECRET_ANSWER: ${DJANGO_SUPERUSER_SECRET_ANSWER}
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
