fix: update avatar

--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -49,6 +49,14 @@ http {
             proxy_set_header Connection $connection_upgrade;
         }
 
+        location /avatars/ {
+            root /var/www/data/;
+            expires max;
+            access_log off;
+            try_files $uri /404.jpg;
+            dav_methods PUT DELETE MKCOL COPY MOVE; 
+        }
+
         location ~ /\.$ {
             deny all;
         }
