--- a/elk/docker-compose.yml
+++ b/elk/docker-compose.yml
@@ -174,6 +174,7 @@ services:
       - ./elk/setup/entrypoint.sh:/entrypoint.sh:ro,Z
       - ./elk/setup/lib.sh:/lib.sh:ro,Z
       - ./elk/setup/roles:/roles:ro,Z
+      - ./elk/setup/saved_object/export.ndjson:/import/kibana_objects.ndjson:ro,Z # 設定ファイルをマウント
     environment:
       # ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
       # LOGSTASH_INTERNAL_PASSWORD: ${LOGSTASH_INTERNAL_PASSWORD:-}
@@ -195,6 +196,9 @@ services:
     depends_on:
       elasticsearch:
         condition: service_healthy
+      kibana:
+        condition: service_started
+
 
 volumes:
   vol_elasticsearch:
