fix:  volの命名規則

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -127,5 +127,5 @@ volumes:
   vol_rdbms:
     name: "vol_rdbms"
     
-  avatars_data:
-    name: "avatars_data"
+  vol_avatars_data:
+    name: "vol_avatars_data"
