--- a/api/tool/requirements.txt
+++ b/api/tool/requirements.txt
@@ -4,6 +4,6 @@ djangorestframework==3.15.2
 channels==4.2.0
 daphne==4.1.2
 channels-redis==4.2.1
-djangorestframework-simplejwt
-requests
-Pillow
+djangorestframework-simplejwt==5.2.2
+requests==2.28.1
+Pillow==9.4.0
