フレンド機能のAPI実装

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -46,6 +46,7 @@ RUN python manage.py startapp player
 RUN python manage.py startapp tournament
 RUN python manage.py startapp match
 RUN python manage.py startapp user
+RUN python manage.py startapp friend
 
 # project, appsのファイルをコピー
 COPY ./api/conf/project/* ${DJANGO_PROJECT_DIR}${DJANGO_PROJECT_NAME}/
@@ -53,6 +54,7 @@ COPY ./api/conf/app_player/* ${DJANGO_PROJECT_DIR}player/
 COPY ./api/conf/app_tournament/* ${DJANGO_PROJECT_DIR}tournament/
 COPY ./api/conf/app_match/* ${DJANGO_PROJECT_DIR}match/
 COPY ./api/conf/app_user/* ${DJANGO_PROJECT_DIR}user/
+COPY ./api/conf/app_friend/* ${DJANGO_PROJECT_DIR}friend/
 
 # Create utils Directory and Copy files
 RUN mkdir -p ${DJANGO_PROJECT_DIR}utils
