--- a/static-builder/biome.json
+++ b/static-builder/biome.json
@@ -28,7 +28,14 @@
     "parser": {
       "unsafeParameterDecoratorsEnabled": true
     },
-    "globals": ["WALL_X_LIMIT", "WALL_Y_LIMIT", "BACKGROUND_COLOR", "PADDLE_HEIGHT", "END_GAME_SCORE", "BALL_RADIUS"],
+    "globals": [
+      "WALL_X_LIMIT",
+      "WALL_Y_LIMIT",
+      "BACKGROUND_COLOR",
+      "PADDLE_HEIGHT",
+      "END_GAME_SCORE",
+      "BALL_RADIUS"
+    ],
     "formatter": {
       "enabled": true,
       "quoteStyle": "single",
