fix: docker内部で startproject startapp を行わないように変更

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -37,31 +37,12 @@ RUN pip install --upgrade pip
 COPY ./api/tool/requirements.txt tool/requirements.txt
 RUN pip install --no-cache-dir -r tool/requirements.txt
 
-# Create a Django project
-RUN django-admin startproject ${DJANGO_PROJECT_NAME}
-
-# Create Django apps
 WORKDIR ${DJANGO_PROJECT_DIR}
-RUN python manage.py startapp tournament
-RUN python manage.py startapp match
-RUN python manage.py startapp user
-RUN python manage.py startapp room
-RUN python manage.py startapp friend
 
-# project, appsのファイルをコピー
-COPY ./api/conf/project/* ${DJANGO_PROJECT_DIR}${DJANGO_PROJECT_NAME}/
-COPY ./api/conf/app_tournament/* ${DJANGO_PROJECT_DIR}tournament/
-COPY ./api/conf/app_match/* ${DJANGO_PROJECT_DIR}match/
-COPY ./api/conf/app_user/ ${DJANGO_PROJECT_DIR}user/
-COPY ./api/conf/app_room/* ${DJANGO_PROJECT_DIR}room/
-COPY ./api/conf/app_friend/* ${DJANGO_PROJECT_DIR}friend/
+# confディレクトリのファイルをコンテナ内にコピー
+COPY ./api/conf/ ${DJANGO_PROJECT_DIR}
 
-# Create utils Directory and Copy files
-RUN mkdir -p ${DJANGO_PROJECT_DIR}utils
-COPY ./api/conf/utils/* ${DJANGO_PROJECT_DIR}utils/
-
-# Create shared config Directory and Copy files
-RUN mkdir -p ${DJANGO_PROJECT_DIR}config
+# configディレクトリのファイルをコンテナ内にコピー
 COPY ./config/* ${DJANGO_PROJECT_DIR}config/
 
 # appsで定めたモデルをDBに反映する準備
