fix: スペースの書き方はよくないらしく、イコールで繋ぐべきと書かれていたので、修正。（参考：https://docs.docker.com/reference/build-checks/legacy-key-value-format/）

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,10 +5,10 @@
 FROM python:3.9-slim AS base
 
 # コンテナ起動後にも利用する環境変数(secretは.envへ)
-ENV DJANGO_PROJECT_NAME trans
-ENV DJANGO_PROJECT_DIR /${DJANGO_PROJECT_NAME}/
-ENV BIND_ADDRESS 0.0.0.0
-ENV BIND_PORT 8000
+ENV DJANGO_PROJECT_NAME=trans
+ENV DJANGO_PROJECT_DIR=/${DJANGO_PROJECT_NAME}/
+ENV BIND_ADDRESS=0.0.0.0
+ENV BIND_PORT=8000
 ENV DJANGO_SETTINGS_MODULE=trans.settings
 
 # install for deploy
