--- a/blockchain/docker-compose.yml
+++ b/blockchain/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   hardhat:
     build: .
     environment:
-      RPC_URL: ${PRIVATE_KEY}
+      SEPOLIA_RPC_URL: ${SEPOLIA_RPC_URL}
       PRIVATE_KEY: ${PRIVATE_KEY}
     container_name: hardhat-deployer
 
