fix: timeoutでthrowされる問題を解決

--- a/blockchain/deploy/Makefile
+++ b/blockchain/deploy/Makefile
@@ -1,2 +1,5 @@
 deploy:
-	docker-compose --env-file .env up --build
+	docker-compose --env-file .env up --build --remove-orphans
+	docker-compose --env-file .env down --remove-orphans
+
+.PHONY: deploy
