--- a/blockchain/deploy/docker-compose.yml
+++ b/blockchain/deploy/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   hardhat:
     build: .
@@ -7,3 +5,6 @@ services:
       SEPOLIA_RPC_URL: ${SEPOLIA_RPC_URL}
       PRIVATE_KEY: ${PRIVATE_KEY}
     container_name: hardhat-deployer
+    volumes:
+      # NOTE: artifactsディレクトリ全体をローカルにマウント（ABIファイルを取得するため）
+      - ./artifacts/contracts/MyContract.sol:/app/artifacts/contracts/MyContract.sol
