--- a/elk/logstash/pipeline/logstash.conf
+++ b/elk/logstash/pipeline/logstash.conf
@@ -5,6 +5,11 @@ input {
   http {
     port => 8080
   }
+  file {
+    path => "/var/log/django/app.log"
+    start_position => "beginning"
+    sincedb_path => "/dev/null"
+  }
 }
 
 # filter { }
