add: ブロックチェーンの追加削除の実装

--- a/.env.sample
+++ b/.env.sample
@@ -39,3 +39,10 @@ FILEBEAT_INTERNAL_PASSWORD=changeme
 METRICBEAT_INTERNAL_PASSWORD=changeme
 MONITORING_INTERNAL_PASSWORD=changeme
 BEATS_SYSTEM_PASSWORD=changeme
+
+###############
+# BLOCKCHAIN  #
+###############
+BLOCKCHAIN_RPC_URL=https://sepolia.infura.io/v3/6c1109f241ab4df28479c8335bfcd384
+BLOCKCHAIN_PRIVAT=
+BLOCKCHAIN_CONTRACT_ADDRESS=0x0a820428642F30a8Deb2A50DF639DAa5A87E7A95
