asyncapi.yamlの修正（ゲーム画面でフロントがLeft/Rightの情報を送ることになってるが間違い） Fixes #306

--- a/asyncapi.yaml
+++ b/asyncapi.yaml
@@ -65,7 +65,9 @@ channels:
     publish:
       operationId: sendKeyInputForRemoteMatch
       message:
-        $ref: '#/components/messages/KeyInput'
+        KeyInput:
+          payload:
+            $ref: '#/components/schemas/KeyInput'
     subscribe:
       operationId: onMatchStatusForRemoteMatch
       message:
