フロント検証用の機能を追加（MainにはMergeしないよ）

--- a/.env.sample.local
+++ b/.env.sample.local
@@ -7,8 +7,8 @@ DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=pass
 SECRET_KEY='8j3o2c@xo^@)evj7es4i2)v*zcoht2zb=ce@l00&z3v8&r$)j='
 
-VITE_API_URL=http://localhost
-VITE_WEBSOCKET_URL=ws://localhost
+VITE_API_URL=http://localhost:3001
+VITE_WEBSOCKET_URL=ws://localhost:3002
 
 ###############
 # RDBMS SETUP #
@@ -16,7 +16,6 @@ VITE_WEBSOCKET_URL=ws://localhost
 POSTGRES_DB=my_database
 POSTGRES_USER=my_user
 POSTGRES_PASSWORD=my_password
-
 
 ##############
 # CERT SETUP #
